==> hso-esk/emb6/target/mcu/efm32lg840f256/efm32lg840.c <==
#include "../efm32lg840f256/hwinit.h"
#include "emb6.h"
#include "target.h"
#include "bsp.h"
#include "board_conf.h"
#include "em_device.h"
#include "em_chip.h"
#include "em_cmu.h"
#include "em_wdog.h"
#include "em_int.h"
#include "em_gpio.h"
#include "spidrv.h"
#include "em_usart.h"
#include "em_timer.h"
#include "gpiointerrupt.h"
#include "rt_tmr.h"
#define     LOGGER_ENABLE           LOGGER_HAL
#include    "logger.h"
#define EFM32_LED_ACTIVE_HIGH       TRUE
#define EFM32_LED_OUT_VAL           0
#define EFM32_LED_OUT_VAL           1

static void _hal_uartInit( void )
{
  /* Prepare struct for initializing UART in asynchronous mode*/
  uartInit.enable       = usartDisable;   /* Don't enable UART upon intialization */
  uartInit.refFreq      = 0;              /* Provide information on reference frequency. When set to 0, the reference frequency is */
  uartInit.baudrate     = 115200;         /* Baud rate */
  uartInit.oversampling = usartOVS16;     /* Oversampling. Range is 4x, 6x, 8x or 16x */
  uartInit.databits     = usartDatabits8; /* Number of data bits. Range is 4 to 10 */
  uartInit.parity       = usartNoParity;  /* Parity mode */
  uartInit.stopbits     = usartStopbits1; /* Number of stop bits. Range is 0 to 2 */
  uartInit.mvdis        = false;          /* Disable majority voting */
  uartInit.prsRxEnable  = false;          /* Enable USART Rx via Peripheral Reflex System */
  uartInit.prsRxCh      = usartPrsRxCh0;  /* Select PRS channel if enabled */

  /* Initialize USART with uartInit struct */
  USART_InitAsync(uart, &uartInit);

  /* Configure GPIO pins */
  GPIO_PinModeSet(gpioPortE, 13, gpioModePushPull, 1);
  GPIO_PinModeSet(gpioPortE, 12, gpioModeInput, 0);

  /* Prepare UART Rx and Tx interrupts */
  USART_IntClear(uart, _USART_IFC_MASK);
  USART_IntEnable(uart, USART_IEN_RXDATAV);
  NVIC_ClearPendingIRQ(USART0_RX_IRQn);
  NVIC_ClearPendingIRQ(USART0_TX_IRQn);
  NVIC_EnableIRQ(USART0_RX_IRQn);
  //NVIC_EnableIRQ(USART0_TX_IRQn);

  /* Enable I/O pins at UART1 location #3 */
  uart->ROUTE = USART_ROUTE_RXPEN | USART_ROUTE_TXPEN | USART_ROUTE_LOCATION_LOC3;

  /* Enable UART */
  USART_Enable(uart, usartEnable);

  /* set external UART instance */
  uartStdio = uart;

  /* disable STDIO buffer */
  setvbuf(stdout , NULL , _IONBF , 0);
}

int8_t hal_init (void)
{
  uint8_t ix;
  uint8_t led_num;
  s_hal_gpio_pin_t *p_gpioPin;

  /* reset callback */
  for (ix = 0; ix < E_TARGET_EXT_INT_MAX; ix++) {
    pf_hal_exti[ix] = 0;
  }

  /* initialize Chip */
  CHIP_Init();

  /* initialize clocks */
  _hal_clksInit();

  /* initialize UART */
  _hal_uartInit();

  /* initialize watchdog */
  _hal_wdcInit();

  /* initialize SysTicks */
  _hal_tcInit();

  /* initialize user IOs */
  led_num = sizeof(s_hal_userio) / sizeof(s_hal_gpio_pin_t);
  for (ix = 0; ix < led_num; ix++) {
    p_gpioPin = &s_hal_userio[ix];
    GPIO_PinModeSet(p_gpioPin->port, p_gpioPin->pin, p_gpioPin->mode, p_gpioPin->val);
  }

  /* set priority of GPIO to a low value than of UART0 (4) */
  NVIC_SetPriorityGrouping(4);
  NVIC_SetPriority(USART0_RX_IRQn, 0);
  NVIC_SetPriority(USART0_TX_IRQn, 1);
  NVIC_SetPriority(GPIO_EVEN_IRQn, 2);
  NVIC_SetPriority(GPIO_ODD_IRQn, 3);
  NVIC_SetPriority(TIMER1_IRQn, 4);

  return 1;
}

void hal_ledOff(uint16_t ui_led)
{
  s_hal_gpio_pin_t* p_gpioPin = NULL;

  switch (ui_led) {
    case 0:
      p_gpioPin = &s_hal_userio[0];
      break;
    case 1:
      p_gpioPin = &s_hal_userio[1];
      break;
    default:
      break;
  }

  if (p_gpioPin != NULL)
#if EFM32_LED_ACTIVE_HIGH
    GPIO_PinOutClear(p_gpioPin->port, p_gpioPin->pin);
#else
    GPIO_PinOutSet(p_gpioPin->port, p_gpioPin->pin);
#endif /* EFM32_LED_ACTIVE_HIGH */
}

void hal_ledOn(uint16_t ui_led)
{
  s_hal_gpio_pin_t* p_gpioPin = NULL;

  switch (ui_led) {
    case 0:
      p_gpioPin = &s_hal_userio[0];
      break;
    case 1:
      p_gpioPin = &s_hal_userio[1];
      break;
    default:
      break;
  }

  if (p_gpioPin != NULL)
#if EFM32_LED_ACTIVE_HIGH
    GPIO_PinOutSet(p_gpioPin->port, p_gpioPin->pin);
#else
    GPIO_PinOutClear(p_gpioPin->port, p_gpioPin->pin);
#endif /* EFM32_LED_ACTIVE_HIGH */
}

void hal_extiRegister(en_targetExtInt_t e_extInt, en_targetIntEdge_t e_edge, pfn_intCallb_t pf_cbFnct)
{
#if NETSTK_CFG_ARG_CHK_EN
  if (pf_cbFnct == NULL) {
    return;
  }
#endif

  s_hal_gpio_pin_t *p_pin;
  uint8_t is_falling_edge;
  uint8_t is_rising_edge;

  /*
   * This functions initializes the dispatcher register. Typically
   * GPIOINT_Init() is called once in your startup code.
   */
  GPIOINT_Init();

  switch (e_extInt) {
    case E_TARGET_USART_INT:
      pf_hal_rxCallb = pf_cbFnct;
      break;

    case E_TARGET_RADIO_INT:
    case E_TARGET_EXT_INT_0:
    case E_TARGET_EXT_INT_1:
    case E_TARGET_EXT_INT_2:
      /*
       * Treat external interrupt configurations in same manner
       */
      p_pin = &s_hal_exti_gpio[e_extInt];

      /* store interrupt callback */
      pf_hal_exti[e_extInt] = pf_cbFnct;

      /* register callback function */
      GPIOINT_CallbackRegister(p_pin->pin, _hal_extiCb);

      /* configure external interrupt GPIOs */
      GPIO_PinModeSet(p_pin->port, p_pin->pin, p_pin->mode, p_pin->val);

      /* configure edge detection and disable interrupt by default */
      is_rising_edge = (e_edge == E_TARGET_INT_EDGE_RISING);
      is_falling_edge = (e_edge == E_TARGET_INT_EDGE_FALLING);
      GPIO_IntConfig(p_pin->port, p_pin->pin, is_rising_edge, is_falling_edge, FALSE);
      break;

    default:
      break;
  }
}

void hal_delay_us( uint32_t i_delay )
{
  volatile int i = 0, j = 0;
  uint32_t l_ticks = ((SystemCoreClockGet() / 1000000) * i_delay) / 20;
  for (i = 0; i < l_ticks; i++) {
    j++;  /* prevent for-loop to be removed during optimization */
  }
}
