==> hso-esk/emb6/target/mcu/cc13xx/cc13xx.c <==
#include <stdio.h>
#include <stdint.h>
#include <string.h>
#include "emb6.h"
#include "hwinit.h"
#include "hal.h"
#include "bsp.h"
#include "board_conf.h"
#include "sf_mcu.h"
#include "sf_mcu_timer.h"
#include "sf_uart.h"
#include "bsp_led.h"
#include "lcd_dogm128_6.h"
#include "driverlib/interrupt.h"
#include "rt_tmr.h"
#define     LOGGER_ENABLE        LOGGER_HAL
#include    "logger.h"
#define TARGET_CFG_SYSTICK_RESOLUTION           (clock_time_t)( 1000u )
#define TARGET_CFG_SYSTICK_SCALER               (clock_time_t)(    2u )
#define MCU_TICKS_PER_SECOND                    2000U
#define MCU_INIT_STATUS_OK                      0x01U
#define MCU_INIT_RET_STATUS_CHECK(X)            ( X == MCU_INIT_STATUS_OK )

bool _hal_uart_init()
{
  bool b_return = false;
  uint8_t p_data[] = { "\r\n\r\n========== BEGIN ===========\r\n\r\n" };
  uint16_t i_dataLen = sizeof(p_data);

  /* Initialize UART */
  b_return = sf_uart_init();

  if (b_return) {
    if (!(sf_uart_write(p_data, i_dataLen) == i_dataLen))
    {
      b_return = false;
    }
  }

  return b_return;
}

int8_t hal_init(void)
{
  uint8_t c_retStatus = 0U;

#if CC13XX_LCD_ENABLE
  char lcdBuf[LCD_BYTES];
#endif /* #if CC13XX_LCD_ENABLE */

  /* Initialize the mcu */
  c_retStatus = sf_mcu_init();
  if(MCU_INIT_RET_STATUS_CHECK(c_retStatus))
  {
    /* Initialize the timer. MCU_TICKS_PER_SECOND specifies
     * the tick interval. */
    c_retStatus = sf_mcu_timer_init(MCU_TICKS_PER_SECOND);
    if(MCU_INIT_RET_STATUS_CHECK(c_retStatus))
    {
      c_retStatus = _hal_uart_init();
      if(MCU_INIT_RET_STATUS_CHECK(c_retStatus))
      {
        c_retStatus = _hal_systick();
      }
    }
  }

  /* Initialize hal_ticks */
  hal_ticks = 0x00U;

  /* initialize LEDs */
  bspLedInit( BSP_LED_ALL );

#if CC13XX_LCD_ENABLE
  /* initialize LCD */
  lcdSpiInit();
  lcdInit();
  lcdClear();

  /* Send Simple Message */
  lcdBufferClear( lcdBuf );
  lcdSendBuffer( lcdBuf );
#endif /* #if CC13XX_LCD_ENABLE */

  return (!c_retStatus);
}

void hal_ledOff(uint16_t ui_led)
{
    switch( ui_led )
    {
        case CC1310_LED0:
            bspLedClear( BSP_LED_1 );
            break;

        case CC1310_LED1:
            bspLedClear( BSP_LED_2 );
            break;

        case CC1310_LED2:
            bspLedClear( BSP_LED_3 );
            break;

        case CC1310_LED3:
            bspLedClear( BSP_LED_4 );
            break;
    }
}

void hal_ledOn(uint16_t ui_led)
{
    switch( ui_led )
    {
        case CC1310_LED0:  /* LED mask */
            bspLedSet( BSP_LED_1 );
            break;

        case CC1310_LED1:
            bspLedSet( BSP_LED_2 );
            break;

        case CC1310_LED2:
            bspLedSet( BSP_LED_3 );
            break;

        case CC1310_LED3:
            bspLedSet( BSP_LED_4 );
            break;
    }
}

int8_t hal_delayUs(uint32_t i_delay)
{
  /*
   * Note(s)
   *
   * hal_delay_us() is only called by emb6.c to make a delay multiple of 500us,
   * which is equivalent to 1 systick
   */
  uint32_t tick_stop;

  hal_enterCritical();
  tick_stop = hal_ticks;
  tick_stop += i_delay / 500;
  hal_exitCritical();
  while (tick_stop > hal_ticks)
  {
    /* do nothing */
  }
  return 0;
}

void* hal_uartInit( en_hal_uart_t uart )
{
    sf_uart_init();
}

void hal_extiRegister(en_hal_irqedge_t e_edge, pf_hal_irqCb_t pf_cbFnct)
{
    /* Not used */
}
